--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -15,7 +15,7 @@ jobs:
     # The OS to run the job on
     runs-on: ubuntu-latest
     # Steps
-    stops:
+    steps:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Install node 16
