--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -37,7 +37,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Download artifacts
-        uses: actions/download-artifact@2
+        uses: actions/download-artifact@v2
         with:
           name: production-files
           path: ./dist
