--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -35,6 +35,7 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: Download artifacts
         uses: actions/download-artifact@v2
