--- a/package.json
+++ b/package.json
@@ -17,5 +17,6 @@
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
     "vite": "^3.1.0"
-  }
+  },
+  "homepage": "https://www.surender.net/github-actions/"
 }
