--- a/package.json
+++ b/package.json
@@ -18,5 +18,5 @@
     "@vitejs/plugin-react": "^2.1.0",
     "vite": "^3.1.0"
   },
-  "homepage": "https://www.surender.net/github-actions/"
+  "homepage": "https://surenderlohia.github.io/github-actions/"
 }
